--- a/src/Pages/Tracks/Tracks.css
+++ b/src/Pages/Tracks/Tracks.css
@@ -8,8 +8,11 @@
     align-items: center;
     
 }
-.tracks1,.tracks2{
+.tracks1{
     display:flex;
     flex-direction: row;
+}
+.tracks2{
+    display:flex;
 }
 
