--- a/src/Pages/Tracks/Tracks.css
+++ b/src/Pages/Tracks/Tracks.css
@@ -1,3 +1,7 @@
+.header{
+    margin-bottom: 1rem;
+  height: 10rem;
+}
 .tracks{
     background-color: var(--secondary_color);
     color: var(--color_white);
