--- a/src/Pages/Tracks/Tracks.css
+++ b/src/Pages/Tracks/Tracks.css
@@ -1,6 +1,13 @@
 .top{
     margin-bottom: 1rem;
   height: 10rem;
+margin-left: 30%;
+font-weight: bolder;
+}
+.top p{
+    margin-left: 10%;
+    font-size: larger;
+    
 }
 
 .tracks{
