--- a/src/Pages/Tracks/Tracks.css
+++ b/src/Pages/Tracks/Tracks.css
@@ -3,11 +3,12 @@
   height: 10rem;
 margin-left: 30%;
 font-weight: bolder;
+
 }
 .top p{
     margin-left: 10%;
     font-size: larger;
-    
+
 }
 
 .tracks{
@@ -19,6 +20,11 @@ font-weight: bolder;
     justify-content: center;
     align-items: center;
     gap:2rem
+}
+.tracks:hover{
+    scale: 1.1;
+background-color: var(--light_color);
+color: var(--primary_color);
 }
 .tracks1{
     display:flex;
