--- a/src/Pages/Tracks/Tracks.css
+++ b/src/Pages/Tracks/Tracks.css
@@ -21,11 +21,7 @@ font-weight: bolder;
     align-items: center;
     gap:2rem
 }
-.tracks:hover{
-    scale: 1.1;
-background-color: var(--light_color);
-color: var(--primary_color);
-}
+
 .tracks1{
     display:flex;
     flex-direction: row;
@@ -45,3 +41,8 @@ color: var(--primary_color);
     font-weight: bolder;
 }
 
+.cybersecurity:hover{
+    scale: 1.1;
+background-color: var(--light_color);
+color: var(--primary_color);
+}
