--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -15,8 +15,8 @@ html {
 }
 
 :root {
-  --primary_color:#31363F;
-  --secondary_color: #222831;
+  --primary_color:#344C64;
+  --secondary_color: #57A6A1;
   --color_blue: #76ABAE;
   --light_color: #dfd0b8;
   --color_white:#FFDA9D;
