--- a/src/Pages/Leaders/Leaders.css
+++ b/src/Pages/Leaders/Leaders.css
@@ -58,12 +58,12 @@
   flex-direction: column;
   align-items: center;
   border:2px solid grey;
-  border-radius: 20px;
+  border-radius: 30%;
 transition: all.100;
 
 }
 .victory h1{
-  clip-path: polygon(28% 6%, 80% 2%, 93% 5%, 43% 35%, 26% 54%, 10% 73%, 0% 80%, 8% 25%);
+ 
 }
 
 .victory:hover{
@@ -71,5 +71,10 @@ scale: 1.1;
 background-color: var(--light_color);
 color: var(--primary_color);
 
+}
+.links{
+  display:flex;
+  flex-direction: row;
+  gap:3rem;
 }
 
