--- a/src/Pages/Leaders/Leaders.css
+++ b/src/Pages/Leaders/Leaders.css
@@ -56,14 +56,24 @@
   width:40rem;
   display:flex;
   flex-direction: column;
+  gap:1rem;
   align-items: center;
   border:2px solid grey;
   border-radius: 30%;
-transition: all.100;
+transition: all.5000s ease-in-out;
 
 }
 .victory h1{
  
+}
+.leaders2{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.ourleaders{
+  gap: 2rem;
 }
 
 .victory:hover{
@@ -75,7 +85,7 @@ color: var(--primary_color);
 .links{
   display:flex;
   flex-direction: row;
-  gap:0.5px;
+  gap:4rem;
   margin-top: 3rem;
   padding:5px 30px;
   align-items: center;
