--- a/src/Pages/Leaders/Leaders.css
+++ b/src/Pages/Leaders/Leaders.css
@@ -66,11 +66,7 @@ transition: all.5000s ease-in-out;
 .victory h1{
  
 }
-.leaders2{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
+
 
 .ourleaders{
   gap: 2rem;
@@ -92,6 +88,8 @@ color: var(--primary_color);
 
 }
 .links a{
-  color:var(--primary_color)
+  color:var(--primary_color);
 }
-
+.links a:hover{
+  color:var(--color_white);
+}
