--- a/src/Pages/Tracks/Tracks.css
+++ b/src/Pages/Tracks/Tracks.css
@@ -44,7 +44,7 @@ font-weight: bolder;
     border-top: 2px solid grey;
     padding: 1.5rem;
     font-size: medium;
-    
+    margin-bottom: 2rem;
     
 }
 .cybersecurity h1{
