--- a/src/Pages/Tracks/Tracks.css
+++ b/src/Pages/Tracks/Tracks.css
@@ -29,11 +29,14 @@ font-weight: bolder;
     flex-direction: row;
     gap:2rem;
     margin-top: 20px;
+    min-height:30%;
+    overflow: hidden;
 }
 .tracks2{
     display:flex;
     flex-direction: row;
     gap:2rem;
+    min-height: 30%;
 }
 
 .cybersecurity{
@@ -45,6 +48,8 @@ font-weight: bolder;
     padding: 1.5rem;
     font-size: medium;
     margin-bottom: 2rem;
+    line-height: 20px;
+    letter-spacing: .5px;
     
 }
 .cybersecurity h1{
@@ -54,5 +59,7 @@ font-weight: bolder;
 
 .cybersecurity p:hover{
 scale: 1.1;
-transition: all.6s;
+transition: all 1.5s;
+overflow: hidden;
+
 }
