--- a/src/Pages/Home/Testimonies.css
+++ b/src/Pages/Home/Testimonies.css
@@ -1,9 +1,10 @@
-.textimonies {
+.testimonies {
   background-color: var(--light_color);
 }
 .testimonies h1 {
   font-size: 4rem;
   display: flex;
+  gap:1px;
   justify-content: center;
   background-color: var(--primary_color);
   padding-top: 3rem;
@@ -11,7 +12,7 @@
 }
 
 .testimonies h1 {
-  background-color: var(--light_color);
+  background-color: var(--primary_color);
 }
 
 .members_say {
@@ -22,9 +23,11 @@
   font-style: italic;
   display: flex;
   gap: 5rem;
-  background-color: var(--secondary_color);
-  color: white;
+  background-color: var(--primary_color);
+  color:#FFDA9D ;
   padding-top: 2rem;
+  margin-top:10px;
+  
  
 }
 
@@ -33,15 +36,15 @@
   font-style: normal;
 }
 
-.joseph h2 {
+.vee h2 {
   float: left;
 }
-.joseph{
+.vee{
   border:3px solid grey;
   border-radius:30%;
   padding:6rem;
 }
-.joseph p:hover{
+.vee p:hover{
   color:purple;
   scale: 1.1;
   transition:all 0.6s ease-in-out;
