--- a/src/Pages/Home/About.css
+++ b/src/Pages/Home/About.css
@@ -1,11 +1,17 @@
 .about {
-  height: 70vh;
+ 
   background-color: var(--secondary_color);
   color: var(--color_white);
   display: flex;
   width: 100%;
   padding-top: 15rem;
   gap: 15rem;
+  margin-top: .5px;
+
+}
+.us{
+  margin-top:1px;
+  
 }
 
 .socials {
@@ -13,12 +19,18 @@
   margin: 0;
   display: flex;
   flex-direction: column;
+  
+  
 }
 .socials p {
   width: 40%;
 }
 .aboutus{
-  display:grid;
+  display:flex;
+  padding:2px;
+  align-items: center;
+ 
+  
 }
 .contactinfo{
   border:2px solid grey;
