--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   display: flex;
   align-items: center;
-  background-color: var(--secondary_color);
+  background-color: #3C0753;
   padding-left: 1rem;
   padding-right: 1rem;
   background-color: var(--light_color);
