--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,13 +4,13 @@
   display: flex;
   align-items: center;
   background-color: #3C0753;
+  color:var(--color_white);
   padding-left: 1rem;
   padding-right: 1rem;
-  background-color: var(--light_color);
   padding-bottom: 2rem;
   
 }
-.Bottomheader{}
+
 
 @media screen and (max-width: 44.375em) {
   .topHeader {
@@ -48,13 +48,14 @@
   gap: 5rem;
 }
 
-/* ************************BOTTOMHEADER CSS******************** */
+/* border bottom */
 .navigation_bar {
   display: flex;
   justify-content: center;
-  background-color: var(--light_color);
+  background-color: #3C0753;
   padding-top: 2rem;
   padding-bottom: 2rem;
+  color:var(--color_white);
 }
 .nav_list {
   display: flex;
@@ -66,7 +67,7 @@
 
 .nav_item a {
   text-decoration: none;
-  color: #153448;
+  color:var(--color_white);
   font-weight: 800;
   transition: all.5s;
 }
