--- a/src/components/Header/Footer/Footer.css
+++ b/src/components/Header/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
   background-color: var(--light_color);
-  color: var(--primary_color);
+  color: var(--secondary_color);
   height: 10vh;
   font-size: 3rem;
   display: flex;
